--- a/model_v01_without_metadata.ipynb
+++ b/model_v01_without_metadata.ipynb
@@ -599,35 +599,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 92911 images belonging to 8 classes.\n",
-      "Found 26544 images belonging to 8 classes.\n",
-      "Found 13280 images belonging to 8 classes.\n",
-      "2903 training steps\n",
-      "829 validation steps\n",
-      "415 testing steps\n"
+      "Found 94787 validated image filenames belonging to 9 classes.\n",
+      "Found 20311 validated image filenames belonging to 9 classes.\n",
+      "Found 20312 validated image filenames belonging to 9 classes.\n",
+      "2962 training steps\n",
+      "634 validation steps\n",
+      "634 testing steps\n"
      ]
     }
    ],
    "source": [
+    "# this cell is from dataset_preprocessing_part_2.ipynb and will be used in most model ipynb files to prepare images\n",
+    "train_data = pd.read_csv(dataReDir+'train_datav01.csv')\n",
+    "val_data = pd.read_csv(dataReDir+'val_datav01.csv')\n",
+    "test_data = pd.read_csv(dataReDir+'test_datav01.csv')\n",
+    "\n",
+    "# Create an ImageDataGenerator object\n",
     "train_datagen = ImageDataGenerator()\n",
     "val_datagen = ImageDataGenerator()\n",
     "test_datagen = ImageDataGenerator()\n",
     "\n",
-    "train_gen = train_datagen.flow_from_directory(f'{dataSplit}train/', classes=None, class_mode='categorical', # classes = None means that the classes will be inferred\n",
-    "                                        target_size=(306,306), seed=42, batch_size=32, color_mode='rgb', shuffle=True) # will later change to color_mode = grayscale\n",
+    "# uncomment this if you want to apply augmentation techniques\n",
+    "# train_datagen = ImageDataGenerator(rescale=1./255,\n",
+    "#                              rotation_range=20,\n",
+    "#                              width_shift_range=0.2,\n",
+    "#                              height_shift_range=0.2,\n",
+    "#                              shear_range=0.2,\n",
+    "#                              zoom_range=0.2,\n",
+    "#                              horizontal_flip=True,\n",
+    "#                              fill_mode='nearest')\n",
     "\n",
-    "val_gen = val_datagen.flow_from_directory(f'{dataSplit}val/', classes=None, class_mode='categorical',\n",
-    "                                        target_size=(306,306), seed=42, batch_size=32, color_mode='rgb', shuffle=True)\n",
+    "# Use flow_from_dataframe() to create separate generators for the training, validation, and testing sets\n",
+    "train_gen = train_datagen.flow_from_dataframe(dataframe=train_data,\n",
+    "                                              x_col='filepath',\n",
+    "                                              y_col='label',\n",
+    "                                              target_size=(306, 306),\n",
+    "                                              batch_size=32,\n",
+    "                                              class_mode='categorical')\n",
     "\n",
-    "test_gen = test_datagen.flow_from_directory(f'{dataSplit}test/', classes=None, class_mode='categorical',\n",
-    "                                        target_size=(306,306), seed=42, batch_size=32, color_mode='rgb', shuffle=False)\n",
+    "val_gen = val_datagen.flow_from_dataframe(dataframe=val_data,\n",
+    "                                            x_col='filepath',\n",
+    "                                            y_col='label',\n",
+    "                                            target_size=(306, 306),\n",
+    "                                            batch_size=32,\n",
+    "                                            class_mode='categorical')\n",
+    "\n",
+    "test_gen = test_datagen.flow_from_dataframe(dataframe=test_data,\n",
+    "                                             x_col='filepath',\n",
+    "                                             y_col='label',\n",
+    "                                             target_size=(306, 306),\n",
+    "                                             batch_size=32,\n",
+    "                                             class_mode='categorical')\n",
+    "\n",
+    "\n",
     "modelFileName = 'm01cnn.h5'\n",
     "datasetDescription = 'no metadata, rgb, 306x306, 30 epochs, no augmentation, tf' # tf == tensorflow, pt == pytorch\n",
     "spe = train_gen.samples // train_gen.batch_size\n",
@@ -640,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -678,71 +709,7 @@
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
       "INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\n",
-      "Epoch 1/30\n",
-      "d:\\CS\\projects\\graduation_project\\.conda\\lib\\site-packages\\keras\\metrics.py:254: UserWarning:\n",
-      "\n",
-      "Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \"s\"). The name `reset_states()` has been deprecated to improve API consistency.\n",
-      "\n",
-      "2903/2903 - 372s - loss: 1.0052 - acc: 0.8434 - f1_score: 0.6997 - val_loss: 0.2900 - val_acc: 0.9100 - val_f1_score: 0.8023\n",
-      "Epoch 2/30\n",
-      "2903/2903 - 372s - loss: 0.2332 - acc: 0.9265 - f1_score: 0.8402 - val_loss: 0.2602 - val_acc: 0.9227 - val_f1_score: 0.8202\n",
-      "Epoch 3/30\n",
-      "2903/2903 - 369s - loss: 0.1628 - acc: 0.9480 - f1_score: 0.8909 - val_loss: 0.2368 - val_acc: 0.9315 - val_f1_score: 0.8237\n",
-      "Epoch 4/30\n",
-      "2903/2903 - 363s - loss: 0.1225 - acc: 0.9612 - f1_score: 0.9256 - val_loss: 0.2672 - val_acc: 0.9315 - val_f1_score: 0.8341\n",
-      "Epoch 5/30\n",
-      "2903/2903 - 374s - loss: 0.0897 - acc: 0.9725 - f1_score: 0.9474 - val_loss: 0.3148 - val_acc: 0.9331 - val_f1_score: 0.8333\n",
-      "Epoch 6/30\n",
-      "2903/2903 - 370s - loss: 0.0722 - acc: 0.9792 - f1_score: 0.9590 - val_loss: 0.4762 - val_acc: 0.9223 - val_f1_score: 0.8075\n",
-      "Epoch 7/30\n",
-      "2903/2903 - 374s - loss: 0.0660 - acc: 0.9829 - f1_score: 0.9653 - val_loss: 0.4618 - val_acc: 0.9306 - val_f1_score: 0.8339\n",
-      "Epoch 8/30\n",
-      "2903/2903 - 372s - loss: 0.0540 - acc: 0.9854 - f1_score: 0.9717 - val_loss: 0.4716 - val_acc: 0.9341 - val_f1_score: 0.8338\n",
-      "Epoch 9/30\n",
-      "2903/2903 - 365s - loss: 0.0541 - acc: 0.9866 - f1_score: 0.9747 - val_loss: 0.4721 - val_acc: 0.9331 - val_f1_score: 0.8393\n",
-      "Epoch 10/30\n",
-      "2903/2903 - 371s - loss: 0.0492 - acc: 0.9884 - f1_score: 0.9778 - val_loss: 0.4834 - val_acc: 0.9240 - val_f1_score: 0.8111\n",
-      "Epoch 11/30\n",
-      "2903/2903 - 369s - loss: 0.0526 - acc: 0.9879 - f1_score: 0.9757 - val_loss: 0.5006 - val_acc: 0.9177 - val_f1_score: 0.8136\n",
-      "Epoch 12/30\n",
-      "2903/2903 - 368s - loss: 0.0395 - acc: 0.9903 - f1_score: 0.9785 - val_loss: 0.9154 - val_acc: 0.9145 - val_f1_score: 0.8022\n",
-      "Epoch 13/30\n",
-      "2903/2903 - 372s - loss: 0.0513 - acc: 0.9888 - f1_score: 0.9801 - val_loss: 0.7582 - val_acc: 0.9206 - val_f1_score: 0.8198\n",
-      "Epoch 14/30\n",
-      "2903/2903 - 370s - loss: 0.0426 - acc: 0.9913 - f1_score: 0.9842 - val_loss: 0.6775 - val_acc: 0.9260 - val_f1_score: 0.8297\n",
-      "Epoch 15/30\n",
-      "2903/2903 - 360s - loss: 0.0364 - acc: 0.9921 - f1_score: 0.9841 - val_loss: 0.8573 - val_acc: 0.9248 - val_f1_score: 0.8254\n",
-      "Epoch 16/30\n",
-      "2903/2903 - 368s - loss: 0.0508 - acc: 0.9892 - f1_score: 0.9800 - val_loss: 0.8534 - val_acc: 0.9280 - val_f1_score: 0.8265\n",
-      "Epoch 17/30\n",
-      "2903/2903 - 360s - loss: 0.0415 - acc: 0.9909 - f1_score: 0.9811 - val_loss: 0.8019 - val_acc: 0.9272 - val_f1_score: 0.8299\n",
-      "Epoch 18/30\n",
-      "2903/2903 - 364s - loss: 0.0540 - acc: 0.9902 - f1_score: 0.9823 - val_loss: 0.8515 - val_acc: 0.9146 - val_f1_score: 0.8164\n",
-      "Epoch 19/30\n",
-      "2903/2903 - 363s - loss: 0.0424 - acc: 0.9914 - f1_score: 0.9831 - val_loss: 0.7661 - val_acc: 0.9234 - val_f1_score: 0.8219\n",
-      "Epoch 20/30\n",
-      "2903/2903 - 367s - loss: 0.0381 - acc: 0.9922 - f1_score: 0.9874 - val_loss: 0.8021 - val_acc: 0.9264 - val_f1_score: 0.8326\n",
-      "Epoch 21/30\n",
-      "2903/2903 - 368s - loss: 0.0423 - acc: 0.9919 - f1_score: 0.9838 - val_loss: 1.1104 - val_acc: 0.9063 - val_f1_score: 0.8153\n",
-      "Epoch 22/30\n",
-      "2903/2903 - 366s - loss: 0.0402 - acc: 0.9925 - f1_score: 0.9863 - val_loss: 0.9931 - val_acc: 0.9228 - val_f1_score: 0.8318\n",
-      "Epoch 23/30\n",
-      "2903/2903 - 368s - loss: 0.0452 - acc: 0.9912 - f1_score: 0.9838 - val_loss: 1.0722 - val_acc: 0.9207 - val_f1_score: 0.8330\n",
-      "Epoch 24/30\n",
-      "2903/2903 - 363s - loss: 0.0402 - acc: 0.9929 - f1_score: 0.9872 - val_loss: 0.9528 - val_acc: 0.9171 - val_f1_score: 0.8217\n",
-      "Epoch 25/30\n",
-      "2903/2903 - 365s - loss: 0.0414 - acc: 0.9929 - f1_score: 0.9871 - val_loss: 1.2603 - val_acc: 0.9168 - val_f1_score: 0.8207\n",
-      "Epoch 26/30\n",
-      "2903/2903 - 361s - loss: 0.0442 - acc: 0.9926 - f1_score: 0.9863 - val_loss: 1.2261 - val_acc: 0.9160 - val_f1_score: 0.8211\n",
-      "Epoch 27/30\n",
-      "2903/2903 - 359s - loss: 0.0392 - acc: 0.9930 - f1_score: 0.9879 - val_loss: 1.3015 - val_acc: 0.9113 - val_f1_score: 0.8158\n",
-      "Epoch 28/30\n",
-      "2903/2903 - 358s - loss: 0.0418 - acc: 0.9936 - f1_score: 0.9878 - val_loss: 1.2518 - val_acc: 0.9213 - val_f1_score: 0.8298\n",
-      "Epoch 29/30\n",
-      "2903/2903 - 366s - loss: 0.0385 - acc: 0.9936 - f1_score: 0.9886 - val_loss: 1.0907 - val_acc: 0.9259 - val_f1_score: 0.8257\n",
-      "Epoch 30/30\n",
-      "2903/2903 - 361s - loss: 0.0463 - acc: 0.9936 - f1_score: 0.9873 - val_loss: 1.4592 - val_acc: 0.9185 - val_f1_score: 0.8229\n",
-      "\n"
+      "Epoch 1/30\n"
      ]
     }
    ],
@@ -752,17 +719,14 @@
     "        val_gen, \n",
     "        test_gen, \n",
     "        modelFileName, \n",
-    "        steps_per_epoch=None, \n",
+    "        steps_per_epoch=None, # when None --> train_gen.samples // train_gen.batch_size\n",
     "        epochs=30, \n",
-    "        validation_steps=None, \n",
-    "        workers=10, \n",
+    "        validation_steps=None, # when None --> val_gen.samples // val_gen.batch_size\n",
+    "        workers=8, \n",
     "        verbose=2, \n",
     "        optimizer=\"adam\", \n",
     "        additionalMetrics=[],\n",
-    "        load=True) # False to train, then always set to True to load trained model\n",
-    "\n",
-    "cellOutput = [\"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"INFO:tensorflow:Reduce to /job:localhost/replica:0/task:0/device:CPU:0 then broadcast to ('/job:localhost/replica:0/task:0/device:CPU:0',).\\n\", \"Epoch 1/30\\n\" ] + [ \"d:\\\\CS\\\\projects\\\\graduation_project\\\\.conda\\\\lib\\\\site-packages\\\\keras\\\\metrics.py:254: UserWarning:\\n\", \"\\n\", \"Metric F1Score implements a `reset_states()` method; rename it to `reset_state()` (without the final \\\"s\\\"). The name `reset_states()` has been deprecated to improve API consistency.\\n\", \"\\n\" ] + [ \"2903/2903 - 372s - loss: 1.0052 - acc: 0.8434 - f1_score: 0.6997 - val_loss: 0.2900 - val_acc: 0.9100 - val_f1_score: 0.8023\\n\", \"Epoch 2/30\\n\", \"2903/2903 - 372s - loss: 0.2332 - acc: 0.9265 - f1_score: 0.8402 - val_loss: 0.2602 - val_acc: 0.9227 - val_f1_score: 0.8202\\n\", \"Epoch 3/30\\n\", \"2903/2903 - 369s - loss: 0.1628 - acc: 0.9480 - f1_score: 0.8909 - val_loss: 0.2368 - val_acc: 0.9315 - val_f1_score: 0.8237\\n\", \"Epoch 4/30\\n\", \"2903/2903 - 363s - loss: 0.1225 - acc: 0.9612 - f1_score: 0.9256 - val_loss: 0.2672 - val_acc: 0.9315 - val_f1_score: 0.8341\\n\", \"Epoch 5/30\\n\", \"2903/2903 - 374s - loss: 0.0897 - acc: 0.9725 - f1_score: 0.9474 - val_loss: 0.3148 - val_acc: 0.9331 - val_f1_score: 0.8333\\n\", \"Epoch 6/30\\n\", \"2903/2903 - 370s - loss: 0.0722 - acc: 0.9792 - f1_score: 0.9590 - val_loss: 0.4762 - val_acc: 0.9223 - val_f1_score: 0.8075\\n\", \"Epoch 7/30\\n\", \"2903/2903 - 374s - loss: 0.0660 - acc: 0.9829 - f1_score: 0.9653 - val_loss: 0.4618 - val_acc: 0.9306 - val_f1_score: 0.8339\\n\", \"Epoch 8/30\\n\", \"2903/2903 - 372s - loss: 0.0540 - acc: 0.9854 - f1_score: 0.9717 - val_loss: 0.4716 - val_acc: 0.9341 - val_f1_score: 0.8338\\n\", \"Epoch 9/30\\n\", \"2903/2903 - 365s - loss: 0.0541 - acc: 0.9866 - f1_score: 0.9747 - val_loss: 0.4721 - val_acc: 0.9331 - val_f1_score: 0.8393\\n\", \"Epoch 10/30\\n\", \"2903/2903 - 371s - loss: 0.0492 - acc: 0.9884 - f1_score: 0.9778 - val_loss: 0.4834 - val_acc: 0.9240 - val_f1_score: 0.8111\\n\", \"Epoch 11/30\\n\", \"2903/2903 - 369s - loss: 0.0526 - acc: 0.9879 - f1_score: 0.9757 - val_loss: 0.5006 - val_acc: 0.9177 - val_f1_score: 0.8136\\n\", \"Epoch 12/30\\n\", \"2903/2903 - 368s - loss: 0.0395 - acc: 0.9903 - f1_score: 0.9785 - val_loss: 0.9154 - val_acc: 0.9145 - val_f1_score: 0.8022\\n\", \"Epoch 13/30\\n\", \"2903/2903 - 372s - loss: 0.0513 - acc: 0.9888 - f1_score: 0.9801 - val_loss: 0.7582 - val_acc: 0.9206 - val_f1_score: 0.8198\\n\", \"Epoch 14/30\\n\", \"2903/2903 - 370s - loss: 0.0426 - acc: 0.9913 - f1_score: 0.9842 - val_loss: 0.6775 - val_acc: 0.9260 - val_f1_score: 0.8297\\n\", \"Epoch 15/30\\n\", \"2903/2903 - 360s - loss: 0.0364 - acc: 0.9921 - f1_score: 0.9841 - val_loss: 0.8573 - val_acc: 0.9248 - val_f1_score: 0.8254\\n\", \"Epoch 16/30\\n\", \"2903/2903 - 368s - loss: 0.0508 - acc: 0.9892 - f1_score: 0.9800 - val_loss: 0.8534 - val_acc: 0.9280 - val_f1_score: 0.8265\\n\", \"Epoch 17/30\\n\", \"2903/2903 - 360s - loss: 0.0415 - acc: 0.9909 - f1_score: 0.9811 - val_loss: 0.8019 - val_acc: 0.9272 - val_f1_score: 0.8299\\n\", \"Epoch 18/30\\n\", \"2903/2903 - 364s - loss: 0.0540 - acc: 0.9902 - f1_score: 0.9823 - val_loss: 0.8515 - val_acc: 0.9146 - val_f1_score: 0.8164\\n\", \"Epoch 19/30\\n\", \"2903/2903 - 363s - loss: 0.0424 - acc: 0.9914 - f1_score: 0.9831 - val_loss: 0.7661 - val_acc: 0.9234 - val_f1_score: 0.8219\\n\", \"Epoch 20/30\\n\", \"2903/2903 - 367s - loss: 0.0381 - acc: 0.9922 - f1_score: 0.9874 - val_loss: 0.8021 - val_acc: 0.9264 - val_f1_score: 0.8326\\n\", \"Epoch 21/30\\n\", \"2903/2903 - 368s - loss: 0.0423 - acc: 0.9919 - f1_score: 0.9838 - val_loss: 1.1104 - val_acc: 0.9063 - val_f1_score: 0.8153\\n\", \"Epoch 22/30\\n\", \"2903/2903 - 366s - loss: 0.0402 - acc: 0.9925 - f1_score: 0.9863 - val_loss: 0.9931 - val_acc: 0.9228 - val_f1_score: 0.8318\\n\", \"Epoch 23/30\\n\", \"2903/2903 - 368s - loss: 0.0452 - acc: 0.9912 - f1_score: 0.9838 - val_loss: 1.0722 - val_acc: 0.9207 - val_f1_score: 0.8330\\n\", \"Epoch 24/30\\n\", \"2903/2903 - 363s - loss: 0.0402 - acc: 0.9929 - f1_score: 0.9872 - val_loss: 0.9528 - val_acc: 0.9171 - val_f1_score: 0.8217\\n\", \"Epoch 25/30\\n\", \"2903/2903 - 365s - loss: 0.0414 - acc: 0.9929 - f1_score: 0.9871 - val_loss: 1.2603 - val_acc: 0.9168 - val_f1_score: 0.8207\\n\", \"Epoch 26/30\\n\", \"2903/2903 - 361s - loss: 0.0442 - acc: 0.9926 - f1_score: 0.9863 - val_loss: 1.2261 - val_acc: 0.9160 - val_f1_score: 0.8211\\n\", \"Epoch 27/30\\n\", \"2903/2903 - 359s - loss: 0.0392 - acc: 0.9930 - f1_score: 0.9879 - val_loss: 1.3015 - val_acc: 0.9113 - val_f1_score: 0.8158\\n\", \"Epoch 28/30\\n\", \"2903/2903 - 358s - loss: 0.0418 - acc: 0.9936 - f1_score: 0.9878 - val_loss: 1.2518 - val_acc: 0.9213 - val_f1_score: 0.8298\\n\", \"Epoch 29/30\\n\", \"2903/2903 - 366s - loss: 0.0385 - acc: 0.9936 - f1_score: 0.9886 - val_loss: 1.0907 - val_acc: 0.9259 - val_f1_score: 0.8257\\n\", \"Epoch 30/30\\n\", \"2903/2903 - 361s - loss: 0.0463 - acc: 0.9936 - f1_score: 0.9873 - val_loss: 1.4592 - val_acc: 0.9185 - val_f1_score: 0.8229\\n\" ]\n",
-    "print(''.join(cellOutput))"
+    "        load=False) # False to train, then always set to True to load trained model"
    ]
   },
   {
